# gp-parser-lib

./: pyproject.toml
notebooks/modern-compiler-implementation-exercises/: check_LALR1.ipynb  check_bfcn.ipynb  check_if.ipynb  exercise_3_10.ipynb  exercise_3_11.ipynb  exercise_3_12.ipynb  exercise_3_13.ipynb  exercise_3_14.ipynb  exercise_3_9.ipynb  ll_exercises.ipynb  lr_exercises.ipynb
src/gp_parser_lib/: __init__.py  check_if.py
src/parsers/: base_parser.py  bison_grammar_parser.py  example_grammars.py  ll.py  parser_types.py
src/parsers/grammars/: __init__.py  appel_grammar_parser.py  bison_grammar_parser.py  example_grammars.py
src/parsers/lr/: helpers.py  lr0.py  lr1.py  lr_parsing_engine.py  lr_types.py  slr.py  to_graphviz.py  to_mermaid.py
tests/: test_bison_grm.py  test_grammars.py  test_lalr.py  test_ll1.py  test_lr0.py  test_lr1.py  test_slr.py
