[project]
name = "gp-parser-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Szymon Górka", email = "55995692+AIn0n@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "loguru>=0.7.3",
    "mermaid-py>=0.8.3",
    "pandas>=3.0.1",
    "pydot>=4.0.1",
    "pytest>=9.0.2",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "types-tabulate>=0.9.0.20241207",
]

[project.scripts]
gp-parser-lib = "gp_parser_lib:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "mypy>=1.19.1",
]
